<resources>
    <string name="app_name">Recipo</string>
    <string name="get_all_your_cravings_cooked">Get all your Cravings cooked</string>
    <string name="your_meal">Your Meal</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="your_recipes_for">Your recipes for</string>
    <string name="source">source</string>
    <string name="youtube">youtube</string>
    <string name="ingredients">ingredients</string>
    <string name="dot_loading">dot_loading</string>
    <string name="instructions">instructions</string>
    <string name="country">country</string>
    <string name="category">category</string>
    <string name="meal_category">meal category</string>
    <string name="favourite">favourite</string>
    <string name="meal_name">Meal Name</string>
    <string name="search">search</string>
    <string name="sign_in">sign in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter Your password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="confirm_your_password">Confirm your Password</string>
</resources>