<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/get_all_your_cravings_cooked"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/introEditText"
        android:hint="@string/your_meal"
        android:textColor="@color/black"
        android:layout_above="@+id/searchRecipeButton"
        android:background="@color/design_default_color_background"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/searchRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="50dp"
        android:text="@string/search_recipe"
        android:textColor="@color/black"
        android:theme="@style/myButtonTheme"/>

</RelativeLayout>