<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context="com.moringaschool.recipo.ui.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangular"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingVertical="15dp"
            android:paddingLeft="60dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_baseline_email_24"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangular"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingVertical="15dp"
            android:paddingLeft="60dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_baseline_vpn_key_24"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:text="@string/log_in"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:textAllCaps="true"
        android:textSize="25sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        >
        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Sign up!"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>

</LinearLayout>